--- a/dynamic_page.html
+++ b/dynamic_page.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="robots" content="noindex" />
         <meta charset="UTF-8">
-        <title>Gwennen Regex Generator</title>
+        <title>Map Mod Regex Generator</title>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9.5/brython_stdlib.js"></script>
         <link href="css/layout.css" rel="stylesheet" type="text/css" />
