--- a/dynamic_page.html
+++ b/dynamic_page.html
@@ -12,7 +12,8 @@
     <body onload="brython(1)">
         <section class="main">
             <script type="text/python" src="ngram_generated.py"></script>
-            <p id="otherversion"></p>
+            <h1>This project is currently Mothballed.  Check out <a href="https://poe.re/#/maps">https://poe.re/#/maps</a></h1>
+
             <p><strong>Usage Note:</strong> The quotes at the beginning and end of the string are important.  These won't work without them.</p>
             <p>Updated for 3.17.  Please note the search string can match map names.  Will be corrected when I find an authoritative list.</p>
             <p id="time"></p>
